--- a/proyecto/src/app/editar-informacion-modal/editar-informacion-modal.component.html
+++ b/proyecto/src/app/editar-informacion-modal/editar-informacion-modal.component.html
@@ -1,10 +1,25 @@
 <!-- Button trigger modal -->
-<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModalCenter">
-  Editar información
+<button
+  type="button"
+  class="btn btn-secondary btn-icon-split"
+  data-toggle="modal"
+  data-target="#exampleModalCenter"
+>
+  <span class="icon text-white-50">
+    <i class="fas fa-edit"></i>
+  </span>
+  <span class="text">Editar información</span>
 </button>
 
 <!-- Modal -->
-<div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+<div
+  class="modal fade"
+  id="exampleModalCenter"
+  tabindex="-1"
+  role="dialog"
+  aria-labelledby="exampleModalCenterTitle"
+  aria-hidden="true"
+>
   <div class="modal-dialog modal-dialog-centered" role="document">
     <div class="modal-content">
       <div class="modal-header">
@@ -14,35 +29,62 @@
         </button>
       </div>
       <div class="modal-body">
-<div class="imagen">
-  <div class="text-center">
-    <img src="{{fileUrl}}" class="rounded img-fluid" alt="Foto de perfil">
-  </div>
- <app-file-uploader *ngIf="this.userData" [userId] = this.user  [type] = true (imagePick)="onImagePicked($event)"></app-file-uploader>
-
-</div>
-      <div class="datos">
-        <form [formGroup]="registerForm" >
-          <div class="form-group">
-            <div class="col-sm-10">
-              <label class="label" for="firstName">Nombre: </label>
-              <input type="text" class="form-control form-control-user" formControlName="firstName" id="firstName" required placeholder="Nombre">
-            </div>
-            <div class="col-sm-10">
-              <label class="label" for="lastName">Apellidos: </label>
-              <input type="text" class="form-control form-control-user" formControlName="lastName" id="lastName" required placeholder="Apellidos">
-            </div>
-            <div class="col-sm-10">
-              <label class="label" for="userName">Nombre de usuario: </label>
-              <input type="text" class="form-control form-control-user" formControlName="userName" id="userName" required placeholder="Nombre de usuario">
-            </div>
+        <div class="imagen">
+          <div class="text-center">
+            <img src="{{ fileUrl }}" class="rounded img-fluid" alt="Foto de perfil" />
           </div>
-        </form>
-      </div>
+          <app-file-uploader
+            *ngIf="this.userData"
+            [userId]="this.user"
+            [type]="true"
+            (imagePick)="onImagePicked($event)"
+          ></app-file-uploader>
+        </div>
+        <div class="datos">
+          <form [formGroup]="registerForm">
+            <div class="form-group">
+              <div class="col-sm-10">
+                <label class="label" for="firstName">Nombre: </label>
+                <input
+                  type="text"
+                  class="form-control form-control-user"
+                  formControlName="firstName"
+                  id="firstName"
+                  required
+                  placeholder="Nombre"
+                />
+              </div>
+              <div class="col-sm-10">
+                <label class="label" for="lastName">Apellidos: </label>
+                <input
+                  type="text"
+                  class="form-control form-control-user"
+                  formControlName="lastName"
+                  id="lastName"
+                  required
+                  placeholder="Apellidos"
+                />
+              </div>
+              <div class="col-sm-10">
+                <label class="label" for="userName">Nombre de usuario: </label>
+                <input
+                  type="text"
+                  class="form-control form-control-user"
+                  formControlName="userName"
+                  id="userName"
+                  required
+                  placeholder="Nombre de usuario"
+                />
+              </div>
+            </div>
+          </form>
+        </div>
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
-        <button type="button" class="btn btn-primary" (click)="onSubmit()">Editar información</button>
+        <button type="button" class="btn btn-primary" (click)="onSubmit()">
+          Editar información
+        </button>
       </div>
     </div>
   </div>
