--- a/proyecto/src/app/editar-informacion-modal/editar-informacion-modal.component.html
+++ b/proyecto/src/app/editar-informacion-modal/editar-informacion-modal.component.html
@@ -4,8 +4,15 @@
 </button>
 
 <!-- Modal -->
-<div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
-  <div class="modal-dialog modal-dialog-centered" role="document">
+<div
+  class="modal fade"
+  id="exampleModalCenter"
+  tabindex="-1"
+  role="dialog"
+  aria-labelledby="exampleModalCenterTitle"
+  aria-hidden="true"
+>
+  <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable" role="document">
     <div class="modal-content">
       <div class="modal-header">
         <h5 class="modal-title" id="exampleModalLongTitle">Editar información</h5>
@@ -14,35 +21,88 @@
         </button>
       </div>
       <div class="modal-body">
-<div class="imagen">
-  <div class="text-center">
-    <img src="{{fileUrl}}" class="rounded img-fluid" alt="Foto de perfil">
-  </div>
- <app-file-uploader *ngIf="this.userData" [userId] = this.user  [type] = true (imagePick)="onImagePicked($event)"></app-file-uploader>
-
-</div>
-      <div class="datos">
-        <form [formGroup]="registerForm" >
-          <div class="form-group">
-            <div class="col-sm-10">
-              <label class="label" for="firstName">Nombre: </label>
-              <input type="text" class="form-control form-control-user" formControlName="firstName" id="firstName" required placeholder="Nombre">
-            </div>
-            <div class="col-sm-10">
-              <label class="label" for="lastName">Apellidos: </label>
-              <input type="text" class="form-control form-control-user" formControlName="lastName" id="lastName" required placeholder="Apellidos">
-            </div>
-            <div class="col-sm-10">
-              <label class="label" for="userName">Nombre de usuario: </label>
-              <input type="text" class="form-control form-control-user" formControlName="userName" id="userName" required placeholder="Nombre de usuario">
-            </div>
+        <div class="imagen">
+          <div class="text-center">
+            <img src="{{ fileUrl }}" class="rounded img-fluid" alt="Foto de perfil" />
           </div>
-        </form>
-      </div>
+          <app-file-uploader
+            *ngIf="this.userData"
+            [userId]="this.user"
+            [type]="true"
+            (imagePick)="onImagePicked($event)"
+          ></app-file-uploader>
+        </div>
+        <div class="datos">
+          <form [formGroup]="registerForm">
+            <div class="form-group">
+              <div class="col-sm-10">
+                <label class="label" for="firstName">Nombre: </label>
+                <input
+                  type="text"
+                  class="form-control form-control-user"
+                  formControlName="firstName"
+                  id="firstName"
+                  required
+                  placeholder="Nombre"
+                />
+              </div>
+              <div class="col-sm-10">
+                <label class="label" for="lastName">Apellidos: </label>
+                <input
+                  type="text"
+                  class="form-control form-control-user"
+                  formControlName="lastName"
+                  id="lastName"
+                  required
+                  placeholder="Apellidos"
+                />
+              </div>
+              <div class="col-sm-10">
+                <label class="label" for="userName">Nombre de usuario: </label>
+                <input
+                  type="text"
+                  class="form-control form-control-user"
+                  formControlName="userName"
+                  id="userName"
+                  required
+                  placeholder="Nombre de usuario"
+                />
+              </div>
+            </div>
+          </form>
+        </div>
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
-        <button type="button" class="btn btn-primary" (click)="onSubmit()">Editar información</button>
+        <button type="button" class="btn btn-primary" (click)="onSubmit()">
+          Editar información
+        </button>
+      </div>
+
+      <div class="text-center">
+        <button class="btn btn-link" data-toggle="collapse" href="#multiCollapseExample1" role="button" aria-expanded="false" aria-controls="multiCollapseExample1" >¿Quieres cambiar tu contraseña?</button>
+      </div>
+
+
+      <div class="collapse multi-collapse" id="multiCollapseExample1">
+        <form [formGroup]="passwordForm">
+          <div class="form-group">
+            <div class="col-sm-10">
+              <label class="label" for="newPasword">Nueva contraseña </label>
+              <input
+                type="text"
+                class="form-control form-control-user"
+                formControlName="newPassword"
+                id="newPassword"
+                required
+                placeholder="Nueva contraseña"
+              />
+            </div>
+          </div>
+        </form>
+        <button type="button" class="btn btn-primary" (click)="onSubmitPassword()" [disabled]="!passwordForm.valid">
+          Cambiar contraseña
+        </button>
       </div>
     </div>
   </div>
