--- a/proyecto/src/app/content-wrapper/content-wrapper.component.html
+++ b/proyecto/src/app/content-wrapper/content-wrapper.component.html
@@ -2,7 +2,7 @@
   <!-- Main Content -->
   <div id="content" *ngIf="isLoggedIn">
     <!-- Topbar -->
-    <nav class="navbar navbar-expand navbar-light bg-white topbar mb-4 static-top shadow">
+    <nav class="navbar navbar-expand navbar-light bg-white topbar mb-4 static-top barra">
       <!-- Sidebar Toggle (Topbar) -->
       <button id="sidebarToggleTop" class="btn btn-link d-md-none rounded-circle mr-3">
         <em class="fa fa-bars"></em>
@@ -273,6 +273,9 @@
   </div>
 
     <!-- Content Expand -->
+    <div [ngClass]="{'contenido': isLoggedIn == true}">
     <router-outlet></router-outlet>
+  </div>
+
 
 </div>
